up the version to 0.10

--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,4 @@
 <html>
-<img src=https://i.pinimg.com/736x/10/40/90/104090ebb7b3df5388a190aaa134e0c6--so-happy-to-work.jpg></img>
-Docker Demo version 0.9
+<img src=https://i.pinimg.com/736x/10/40.100/104090ebb7b3df5388a190aaa134e0c6--so-happy-to-work.jpg></img>
+Docker Demo version 0.10
 </html>
