--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,5 @@
 <html>
-<img src=https://i.pinimg.com/736x/10/40.100/104090ebb7b3df5388a190aaa134e0c6--so-happy-to-work.jpg></img>
+<img src=https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/1c110dd1-57b1-4ec8-bea3-4869b7748a43/d97ef2q-e9672306-d9e1-4795-b213-8b53a93dd032.jpg/v1/fill/w_894,h_894,q_70,strp/so_happy_to_work_with_docker_by_bloglaurel_d97ef2q-pre.jpg></img>
 Docker Demo version 0.10
 </html>
+
